--- a/src/Sitecore.Support.106469/packages.config
+++ b/src/Sitecore.Support.106469/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="SC.Sitecore.Analytics" version="8.2.2" targetFramework="net452" />
+  <package id="SC.Sitecore.Analytics.Model" version="8.2.2" targetFramework="net452" />
+  <package id="SC.Sitecore.Commerce" version="8.2.2" targetFramework="net452" />
   <package id="SC.Sitecore.Kernel" version="8.2.1" targetFramework="net452" />
-  <package id="Sitecore.Analytics.Model.NoReferences" version="8.2.161221" targetFramework="net452" />
-  <package id="Sitecore.Analytics.NoReferences" version="8.2.161221" targetFramework="net452"/>
-  <package id="Sitecore.Commerce.NoReferences" version="8.2.161221" targetFramework="net452"/>
 </packages>
